# NepsenX

./: .dockerignore  .env  .env.production  .env.staging  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Pages.toml  README.md  ROADMAP.md  SECURITY.md  VISION.md  docker-compose.yml  index.html  index.tsx  package.json  sr.md  vite.config.ts  wrangler.toml
ai/: bug-detector.ts  code-generator.ts  performance-analyzer.ts  security-scanner.ts  test-generator.ts
backend/: assistant.ts
backup/: recovery-protocol.txt
core/auth/: session-manager.ts  sso-manager.ts
core/database/: backup-system.ts  schema-master.sql  vps2-connector.ts
core/media/: cdn-manager.ts  img2url-api.ts  storage-optimizer.ts  upload-handler.ts
core/realtime/: peer-discovery.ts  signaling-server.ts
core/zerobw/: bandwidth-monitor.ts  cache-strategies.ts  tunnel-handler.ts
src/: appResolver.ts
src/secret/model_co/: CMakeLists.txt  CO_server.cpp  README.md  blackhole.cpp  blackhole.py
src/secret/model_co/core_modules/: c_e.cpp  c_rt.cpp
src/secret/model_co/docs/: ENGLISH-DOCS.md  INSTALLATION.md
src/secret/model_co/include/core/: c_rt.h
src/secret/model_co/include/managers/: manager_core.h
src/secret/model_co/include/memory/: memory_primary.h
src/secret/model_co/injector/: injector.cpp
src/secret/model_co/managers/: manager_memory.cpp  manager_neural.cpp
src/secret/model_co/memory/: memory_cache.cpp  memory_primary.cpp
src/secret/model_co/web_integration/: test_blackhole.html
tests/: coverage-report.ts  test-config.ts  test-runner.ts
(+228 files in other folders)
